@@ -42,6 +42,8 @@ exportMethods(summary)
 exportMethods(upsetplot)
 importClassesFrom(GOSemSim,GOSemSimDATA)
 importClassesFrom(methods,data.frame)
+importFrom(BiocParallel,MulticoreParam)
+importFrom(BiocParallel,bplapply)
 importFrom(DO.db,DOANCESTOR)
 importFrom(DO.db,DOOFFSPRING)
 importFrom(DO.db,DOPARENTS)
@@ -110,9 +112,6 @@ importFrom(igraph,plot.igraph)
 importFrom(igraph,tkplot)
 importFrom(methods,new)
 importFrom(methods,show)
-importFrom(parallel,detectCores)
-importFrom(parallel,mclapply)
-importFrom(plyr,ldply)
 importFrom(qvalue,qvalue)
 importFrom(reshape2,melt)
 importFrom(scales,cscale)
